Changes for 2.2.3rc1

New features:
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Italian translation; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-5789] improved performance of processing discovered graphs by the low-level discovery rule (Sasha)
........S. [ZBX-5789] fixed updating of low-level discovered graphs: the graph identifier never will change (Sasha)
..F....... [ZBX-7772] fixed HTTP authentication error (Eduard)
...G...PS. [ZBX-7670] added typecasts to void pointers when used in arithmetic to avoid compile warnings/errors (Juris)
........S. [ZBX-7572] fixed processing of JSON object by trapper (igors)
.......PS. [ZBX-7763] fixed checking the wrong exit code of php_get_sem() (igors)
..F....... [ZBX-7770] removed web.page.perf item key from simple check item type (Eduard)
..F....... [ZBX-7242] fixed jQuery sortable objects not to change with when dragging them (Ivo)
..F....... [ZBX-7736] fixed incorrectly working global regular expression type "Any character string included" (Ivo)
..F....... [ZBX-7756] fixed SQL error in Monitoring > Maps page (Ivo)
A.F....... [ZBX-7708] fixed trigger prototype error message and trigger form default description value (Oleg)
..F....... [ZBX-7739] removed unused label in screen configuration page when no elements exist (Eduard)
..F....... [ZBX-7651] fixed item configuration flexible interval adding (Eduard)
..F....... [ZBX-7630] fixed latest issues link on monitoring events (Eduard)

--------------------------------------------------------------------------------
Changes for 2.2.2

2.2.2rc3 was released as 2.2.2 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.2rc3

Bug fixes:
........S. [ZBX-7521] fixed possible crash because of item value type change handling in value cache (wiper)